[workspace]
members = [
    "bin/tonic",
    "crates/p2p",
    "crates/primitives",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Ahmet Yazici"]
repository = "https://github.com/yaziciahmet/tonic"

[workspace.dependencies]
# Tonic dependencies
tonic = { path = "bin/tonic" }
tonic-p2p = { path = "crates/p2p" }
tonic-primitives = { path = "crates/primitives" }

# Common dependencies
anyhow = { version = "1", default-features = false }
bincode = { version = "1.3", default-features = false }
bytemuck = { version = "1.19", default-features = false }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand = { version = "0.8" ,default-features = false, features = ["std", "std_rng"] }
serde = { version = "1", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1.41", default-features = false, features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
