[workspace]
members = [
    "bin/tonic",
    "crates/crypto-utils",
    "crates/database",
    "crates/p2p",
    "crates/primitives",
    "crates/rpc",
    "crates/txpool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Ahmet Yazici"]
repository = "https://github.com/yaziciahmet/tonic"

[workspace.dependencies]
# Tonic dependencies
tonic = { path = "bin/tonic", default-features = false }
tonic-crypto-utils = { path = "crates/crypto-utils", default-features = false }
tonic-database = { path = "crates/database", default-features = false }
tonic-p2p = { path = "crates/p2p", default-features = false }
tonic-primitives = { path = "crates/primitives", default-features = false }
tonic-rpc = { path = "crates/rpc", default-features = false }
tonic-txpool = { path = "crates/txpool", default-features = false }

# Common dependencies
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive", "std"] }
bytemuck = { version = "1.19", default-features = false }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
jsonrpsee = { version = "0.24", default-features = false }
primitive-types = { version = "0.13", default-features = false }
rand = { version = "0.8" ,default-features = false, features = ["std", "std_rng"] }
secp256k1 = { version = "0.30" ,default-features = false, features = ["global-context", "recovery"] }
serde = { version = "1", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "1", default-features = false }
tiny-keccak = { version = "2", default-features = false }
tokio = { version = "1.41", default-features = false, features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
