[workspace]
members = [
  "bin/zktonic",
  "crates/consensus/poa",
  "crates/database",
  "crates/p2p",
  "crates/primitives",
  "crates/rpc",
  "crates/tracing",
  # "crates/txpool",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Ahmet Yazici"]
repository = "https://github.com/yaziciahmet/zktonic"

[workspace.dependencies]
# Tonic dependencies
zktonic = { path = "bin/zktonic", default-features = false }
tonic-consensus-poa = { path = "crates/consensus/poa", default-features = false }
tonic-database = { path = "crates/database", default-features = false }
tonic-p2p = { path = "crates/p2p", default-features = false }
tonic-primitives = { path = "crates/primitives", default-features = false }
tonic-rpc = { path = "crates/rpc", default-features = false }
tonic-tracing = { path = "crates/tracing", default-features = false }
# tonic-txpool = { path = "crates/txpool", default-features = false }

# Common dependencies
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive", "std"] }
crypto-bigint = { version = "0.5.5", default-features = false, features = ["serde", "alloc"] }
futures = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
jsonrpsee = { version = "0.24", default-features = false }
madsim = { version = "0.2", default-features = false, features = ["madsim-macros"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false, features = ["asm"] }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "0.2", package = "madsim-tokio", default-features = false, features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = 1
lto = true
codegen-units = 1

[profile.sim]
inherits = "release"
debug = 2
debug-assertions = true
overflow-checks = true

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)"] }

[patch.crates-io]
getrandom = { git = "https://github.com/yaziciahmet/getrandom.git", rev = "cf65e83" }
