[package]
name = "tonic-consensus"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-primitives = { workspace = true }
tonic-signer = { workspace = true }

anyhow = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
test-helpers = []
