[package]
name = "tonic-crypto-utils"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
rand = { workspace = true, optional = true }
secp256k1 = { workspace = true, features = ["recovery"], optional = true }
tiny-keccak = { workspace = true, features = ["keccak"], optional = true }

[features]
default = []
secp256k1 = ["dep:secp256k1"]
keccak256 = ["dep:tiny-keccak"]
test-helpers = ["dep:rand", "secp256k1/rand"]
