[package]
name = "tonic-p2p"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-consensus-core = { workspace = true }

anyhow = { workspace = true }
borsh = { workspace = true }
futures = { workspace = true }
libp2p = { version = "0.54", default-features = false, features = [
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "noise",
  "secp256k1",
  "tcp",
  "tokio",
  "yamux",
] }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tonic = { workspace = true }
