[package]
name = "tonic-primitives"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
crypto-bigint = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
test-helpers = ["ed25519-rand", "crypto-bigint/rand"]
ed25519-rand = ["dep:rand", "ed25519-dalek/rand_core"]
