[package]
name = "tonic-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
crypto-bigint = { workspace = true }
hex = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []
test-helpers = ["k256-rand", "crypto-bigint/rand"]
k256-rand = ["secp256k1/rand"]
