[package]
name = "tonic-signer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-primitives = { workspace = true }

anyhow = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true, optional = true }

[features]
default = []
test-helpers = ["dep:rand"]
