[package]
name = "tonic-txpool"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-primitives = { workspace = true }

thiserror = { workspace = true }

[dev-dependencies]
tonic-primitives = { workspace = true, features = ["test-helpers"] }

[features]
default = []
