[package]
name = "tonic-consensus-engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-consensus-core = { workspace = true }
tonic-p2p = { workspace = true }
tonic-primitives = { workspace = true }

anyhow = { workspace = true }
borsh = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
default = []
test-helpers = []
