[package]
name = "tonic-consensus-poa"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
tonic-primitives = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
madsim = { workspace = true }
tonic-tracing = { workspace = true }

[features]
default = []
test-helpers = ["tonic-primitives/test-helpers"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)"] }
